[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Interactables/UIPanel.gd" type="Script" id=1]
[ext_resource path="res://models/objects/panel.obj" type="ArrayMesh" id=2]
[ext_resource path="res://prefabs/Interactables/Interactable.tscn" type="PackedScene" id=3]

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 0.278431, 0.25098, 0.231373, 1 )

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.913725, 0.745098, 0.380392, 1 )

[node name="UIPanel" type="Spatial"]
script = ExtResource( 1 )

[node name="panel" type="MeshInstance" parent="."]
mesh = ExtResource( 2 )
material/0 = SubResource( 1 )
material/1 = SubResource( 2 )

[node name="OmniLight" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.360088 )
visible = false
light_energy = 3.59

[node name="Interactable" parent="." instance=ExtResource( 3 )]
transform = Transform( 0.577675, 0, 0, 0, 1, 0, 0, 0, 0.465104, 0, 0, 0 )
[connection signal="emit_prompt" from="Interactable" to="." method="_on_Interactable_emit_prompt"]
[connection signal="holding" from="Interactable" to="." method="_on_Interactable_holding"]
[connection signal="release" from="Interactable" to="." method="_on_Interactable_release"]
